--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -205,7 +205,8 @@ jobs:
           CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-ttyd=y
 
-          # 常用软件包:
+          # 常用软件包:       
+          CONFIG_PACKAGE_adguardhome=y
           CONFIG_PACKAGE_AdGuardHome=y
           CONFIG_PACKAGE_autocore=y
           CONFIG_PACKAGE_btop=y
