--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -168,6 +168,7 @@ jobs:
 
           # 文件系统支持:
           # CONFIG_USE_APK is not set
+          # CONFIG_PACKAGE_opkg is not set
           CONFIG_PACKAGE_block-mount=y
           CONFIG_PACKAGE_kmod-fs-exfat=y
           CONFIG_PACKAGE_kmod-fs-ext4=y
@@ -185,7 +186,6 @@ jobs:
           CONFIG_PACKAGE_default-settings-chn=y
 
           # 常用LuCI插件选择:
-          CONFIG_PACKAGE_luci-app-cpufreq=y
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-ksmbd=y
           # CONFIG_PACKAGE_luci-app-package-manager is not set
