--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -184,6 +184,7 @@ jobs:
           CONFIG_PACKAGE_default-settings-chn=y
 
           # 常用LuCI插件选择:
+          # CONFIG_PACKAGE_luci-app-cpufreq is not set
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-ksmbd=y
           CONFIG_PACKAGE_luci-app-package-manager=y
