--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -23,13 +23,14 @@ jobs:
 
     name: NanoPi R6S
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: 初始化系统环境
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
+          docker rmi `docker images -q`
           sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
           sudo -E apt update
           sudo -E apt -y purge azure-cli* docker* ghc* zulu* llvm* firefox google* dotnet* powershell* openjdk* mysql* php* mongodb* dotnet* snap*
