--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -23,16 +23,14 @@ jobs:
 
     name: NanoPi R6S
 
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: 初始化系统环境
-        shell: bash
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo -E rm -rf /etc/apt/sources.list.d
-          sudo bash -c "curl -skL https://raw.githubusercontent.com/sbwml/actions/openwrt-build-setup/sources-24.04.list > /etc/apt/sources.list"
+          sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
           sudo -E apt update
           sudo -E apt -y purge azure-cli* docker* ghc* zulu* llvm* firefox google* dotnet* powershell* openjdk* mysql* php* mongodb* dotnet* snap*
           sudo -E apt -y full-upgrade
