--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -66,6 +66,10 @@ jobs:
         run: |
           ./scripts/feeds update -a
 
+      - name: 调整插件位置
+        run: |
+          sed -i 's/system/services/g' feeds/luci/applications/luci-app-ttyd/luasrc/controller/terminal.lua
+
       - name: 删除部分packages文件
         run: |
           pushd feeds/packages/net
