--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -58,9 +58,10 @@ jobs:
 
       - name: 修改部分submodule
         run: |
-          sed -i '2s/#src/src/g'  feeds.conf.default
-          sed -i '3s/src/#src/g'  feeds.conf.default
-          sed -i '6s/#src/src/g'  feeds.conf.default
+          sed -i '2s/#src/src/g' feeds.conf.default
+          sed -i '3s/src/#src/g' feeds.conf.default
+          sed -i '6s/#src/src/g' feeds.conf.default
+          sed -i '6i\src-git qbittorrent https://github.com/sbwml/luci-app-qbittorrent' feeds.conf.default
 
       - name: 更新feeds源
         run: |
@@ -72,8 +73,18 @@ jobs:
 
       - name: 删除部分packages文件
         run: |
+          pushd feeds/packages/libs
+          rm -rf qtbase
+          rm -rf qttools
+          popd
           pushd feeds/packages/net
           rm -rf adguardhome
+          rm -rf qBittorrent
+
+      - name: 删除部分luci文件
+        run: |
+          pushd feeds/luci/applications
+          rm -rf luci-app-qbittorrent
 
       - name: 安装feeds源
         run: |
@@ -140,8 +151,6 @@ jobs:
           CONFIG_PACKAGE_luci-app-ksmbd=y
           # CONFIG_PACKAGE_luci-app-nlbwmon is not set
           CONFIG_PACKAGE_luci-app-qbittorrent=y
-          # CONFIG_PACKAGE_ luci-app-qbittorrent_staticis not set
-          CONFIG_PACKAGE_luci-app-qbittorrent_dynamic=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Client=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Server=y
