--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b openwrt-24.10 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
+          git clone -b master --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
 
       - name: 修改部分patch文件
@@ -72,11 +72,6 @@ jobs:
           sed -i 's/system/services/g' feeds/luci/applications/luci-app-ttyd/root/usr/share/luci/menu.d/luci-app-ttyd.json
           sed -i 's/<%:Up%>/<%:Move up%>/g' feeds/luci/modules/luci-compat/luasrc/view/cbi/tblsection.htm
           sed -i 's/<%:Down%>/<%:Move down%>/g' feeds/luci/modules/luci-compat/luasrc/view/cbi/tblsection.htm
-
-      - name: 删除部分luci文件
-        run: |
-          pushd feeds/luci/applications
-          rm -rf luci-app-qbittorrent
 
       - name: 删除部分packages文件
         run: |
@@ -111,11 +106,6 @@ jobs:
           rm -rf xray-core
           rm -rf xray-plugin
 
-      - name: golang latest version
-        run: |
-          rm -rf feeds/packages/lang/golang
-          git clone https://github.com/sbwml/packages_lang_golang -b 24.x feeds/packages/lang/golang
-
       - name: 安装feeds源
         run: |
           ./scripts/feeds install -a
@@ -147,8 +137,6 @@ jobs:
           rm -rf qBittorrent-static
           rm -rf qBittorrent
           rm -rf dnsproxy
-          popd
-          git clone https://github.com/sbwml/openwrt-qBittorrent
 
       - name: 载入自定义配置
         run: |
