--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -70,6 +70,12 @@ jobs:
       - name: 调整插件位置&翻译优化
         run: |
           sed -i 's/system/services/g' feeds/luci/applications/luci-app-ttyd/root/usr/share/luci/menu.d/luci-app-ttyd.json
+          sed -i 's/nas/services/g' feeds/luci/applications/luci-app-samba4/root/usr/share/luci/menu.d/luci-app-samba4.json
+
+      - name: 删除部分luci文件
+        run: |
+          pushd feeds/luci/applications
+          rm -rf luci-app-qbittorrent
 
       - name: 删除部分packages文件
         run: |
@@ -104,6 +110,11 @@ jobs:
           rm -rf xray-core
           rm -rf xray-plugin
 
+      - name: golang latest version
+        run: |
+          rm -rf feeds/packages/lang/golang
+          git clone https://github.com/sbwml/packages_lang_golang -b 25.x feeds/packages/lang/golang
+
       - name: 安装feeds源
         run: |
           ./scripts/feeds install -a
@@ -135,6 +146,8 @@ jobs:
           rm -rf qBittorrent-static
           rm -rf qBittorrent
           rm -rf dnsproxy
+          popd
+          git clone https://github.com/sbwml/openwrt-qBittorrent
 
       - name: 载入自定义配置
         run: |
